bug:fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -24,25 +24,33 @@
 } 
 
 .body{
-  max-width: 100%;
+  /* max-width: 100%; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 */
 html, body {
   height: 100%;
+  overflow-x: hidden; /* Prevents horizontal scrolling */
+  max-width: 100%; /* Ensures the width never exceeds the viewport */
 }
 
 body {
   color: var(--main-color);
   background: var(--background-color);
-  font-size: var(--base-font-size); /* Set font size to 10px for easier rem calculation */
+  font-size: var(--base-font-size); /* Set font size to 10px for easier rem calculatiwn */
   /* font-family: './static/EduTASBeginner-Regular.ttf', 'Overlock', Arial, Helvetica, sans-serif; */
   font-family: 'Edu TAS Beginner', cursive;
-  overflow-x: hidden;
+  
+  width: 100vw;
 }
-
+@media only screen and (max-width: 649px) {
+  body{
+    max-width: 100vw;
+  }
+}
 /*
  * Define link styles
  */
